# rgb

./: .gitignore  BETTER.md  CLAUDE.md  Cargo.toml  Cargo.toml.bak  NOTE.md  PROBLEMS.md  README.md  README.typ  ci.sh  clippy.toml  command-plan.md  continued.md  ecs_plan.md  flake.nix  java-packets.json  next-plan.md  plan.md
.claude/skills/flecs-dylib-modules/: SKILL.md
crates/flecs-history/: Cargo.toml
crates/flecs-history/src/: lib.rs
crates/flecs-rgb/: Cargo.toml
crates/flecs-rgb/src/: event.rs  lib.rs  region.rs  scoped.rs  tick.rs
crates/flecs-rgb/tests/: integration.rs
crates/mc-bot/: Cargo.toml
crates/mc-bot/src/: main.rs
crates/mc-client/: Cargo.toml
crates/mc-client/src/: main.rs
crates/mc-data/: Cargo.toml
crates/mc-data/data/: protocol.json
crates/mc-integration-tests/: Cargo.toml
crates/mc-integration-tests/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/mc-integration-tests/tests/: login_flow.rs  server_smoke.rs
crates/mc-packets/: Cargo.toml  build.rs
crates/mc-packets-gen/: Cargo.toml
crates/mc-packets-gen/src/: main.rs
crates/mc-packets/src/: configuration.rs  handshake.rs  lib.rs  login.rs  play.rs  status.rs
crates/mc-protocol/: Cargo.toml
crates/mc-protocol-derive/: Cargo.toml
crates/mc-protocol-derive/src/: lib.rs
crates/mc-protocol/src/: lib.rs  nbt.rs
crates/mc-proxy/: Cargo.toml
crates/mc-proxy/src/: main.rs
crates/mc-server/: Cargo.toml
crates/mc-server-lib/: Cargo.toml
crates/mc-server-lib/src/: lib.rs  packet_dispatch.rs  packets.rs  world_gen.rs
crates/mc-server-lib/src/components/: chunk.rs  handlers.rs  mod.rs  network.rs  player.rs  world_state.rs
crates/mc-server-lib/src/modules/: chunk.rs  config.rs  handshake.rs  login.rs  mod.rs  network.rs  play.rs  time.rs
crates/mc-server-runner/: Cargo.toml
crates/mc-server-runner/src/: audio.rs  components.rs  dashboard.rs  main.rs  network.rs  protocol.rs  registry.rs  systems.rs  world_gen.rs
crates/mc-server-runner/src/systems/: attack.rs  command.rs  config.rs  dashboard.rs  handshake.rs  history.rs  introspect.rs  login.rs  network.rs  play.rs  time.rs
crates/mc-server/src/: main.rs
crates/module-loader/: Cargo.toml
crates/module-loader/src/: lib.rs
crates/module-skript/: Cargo.toml
crates/module-skript/plan/: conditions.md  effects.md  events.md  expressions.md  functions.md  overview.md  types.md  variables.md
crates/module-skript/src/: lib.rs  value.rs
crates/module/chunk/: Cargo.toml
crates/module/chunk-components/: Cargo.toml
crates/module/chunk-components/src/: lib.rs
crates/module/chunk/src/: lib.rs  world_gen.rs
crates/module/config/: Cargo.toml
crates/module/config/src/: lib.rs  registry.rs
crates/module/handshake/: Cargo.toml
crates/module/handshake/src/: lib.rs
crates/module/listener/: Cargo.toml
crates/module/listener/src/: lib.rs
crates/module/login/: Cargo.toml
crates/module/login-components/: Cargo.toml
crates/module/login-components/src/: lib.rs
crates/module/login/src/: lib.rs
crates/module/network/: Cargo.toml
crates/module/network-components/: Cargo.toml
crates/module/network-systems/: Cargo.toml
crates/module/play/: Cargo.toml
crates/module/time/: Cargo.toml
crates/module/time-components/: Cargo.toml
crates/module/time-systems/: Cargo.toml
crates/persist/: Cargo.toml
crates/persist-derive/: Cargo.toml
crates/persist-derive/src/: lib.rs
crates/persist/src/: db.rs  lib.rs
crates/plugin-loader/: Cargo.toml
crates/plugin-loader/src/: lib.rs
crates/plugin-server/: Cargo.toml
crates/plugin-server/src/: lib.rs
crates/plugin-time/: Cargo.toml
crates/plugin-time/src/: lib.rs
crates/query-dsl/: Cargo.toml
crates/query-dsl/src/: lib.rs  parser.rs
crates/rgb-app/: Cargo.toml
crates/rgb-app/src/: main.rs  renderer.rs
crates/rgb-app/src/shaders/: chunk.wgsl
crates/rgb-core/: Cargo.toml
crates/rgb-core/src/: chunk.rs  chunk_manager.rs  color.rs  components.rs  lib.rs  pos.rs  simulation.rs  slice.rs  world.rs
crates/rgb-ecs/: Cargo.toml  build.rs
crates/rgb-ecs-derive/: Cargo.toml
crates/rgb-ecs-derive/src/: lib.rs
crates/rgb-ecs-derive/tests/: component_tests.rs
crates/rgb-ecs-derive/tests/ui/: fail_arc.rs  fail_arc.stderr  fail_box.rs  fail_box.stderr  fail_hashmap.rs  fail_hashmap.stderr  fail_mutex.rs  fail_mutex.stderr  fail_reference.rs  fail_reference.stderr  fail_string.rs  fail_string.stderr  fail_vec.rs  fail_vec.stderr  fail_vecdeque.rs  fail_vecdeque.stderr  pass_arrays.rs  pass_enums.rs  pass_opaque.rs  pass_option.rs  pass_primitives.rs  pass_tuples.rs
crates/rgb-ecs-introspect/: Cargo.toml
crates/rgb-ecs-introspect-derive/: Cargo.toml
crates/rgb-ecs-introspect-derive/src/: lib.rs
crates/rgb-ecs-introspect/src/: error.rs  history.rs  lib.rs  protocol.rs  registry.rs  traits.rs
crates/rgb-ecs/benches/: ecs_criterion.rs  ecs_tango.rs
crates/rgb-ecs/src/: archetype.rs  component.rs  entity.rs  lib.rs  query.rs  relation.rs  singleton.rs  storage.rs  world.rs
crates/rgb-event/: Cargo.toml  implementation.md
crates/rgb-event/src/: color.rs  event.rs  lib.rs  observer.rs  queue.rs  world_ext.rs
crates/rgb-life/: Cargo.toml
crates/rgb-life/src/: chunk.rs  lib.rs  simulation.rs
crates/rgb-query/: Cargo.toml  PLAN.md
crates/rgb-query/src/: lib.rs  scope.rs
crates/rgb-spatial/: Cargo.toml
crates/rgb-spatial/src/: cell.rs  grid.rs  lib.rs
crates/rgb-storage/: Cargo.toml  DESIGN.md  PLAN.md
crates/rgb-storage/src/: buffer.rs  error.rs  keys.rs  lib.rs  versioned_world.rs
crates/rgb-tick/: Cargo.toml  PLAN.md
crates/rgb-tick/src/: lib.rs
crates/rgb-ui/: Cargo.toml
crates/rgb-ui/src/: main.rs
crates/skript-lang/: Cargo.toml  README.md
crates/skript-lang/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/skript-lang/tests/: parse_examples.rs
dashboard/: package.json  pnpm-lock.yaml
dashboard/apps/dashboard/: package.json
fabric-test-agent/: CONTRIBUTING.typ  build.gradle.kts  gradle.properties  settings.gradle.kts
scripts/: link-modules.sh  link-plugins.sh
tools/: gen_packets.py
(+30 files in other folders)
