[workspace]
resolver = "3"
members = [
    "crates/mc-bot",
    "crates/mc-client",
    "crates/mc-data",
    "crates/mc-protocol",
    "crates/mc-protocol-derive",
    "crates/mc-integration-tests",
    "crates/mc-proxy",
    # "crates/mc-server",      # Old server - use mc-server-runner instead
    # "crates/mc-server-lib",  # Compatibility shim - mostly deprecated
    "crates/mc-server-runner",
    # "crates/module-loader",  # Old flecs module system - deprecated
    # "crates/plugin-server",  # Not needed - modules are loaded directly
    # "crates/plugin-time",    # Not needed - modules are loaded directly
    # "crates/rgb-app",        # Uses flecs - TODO: port to new ECS
    # "crates/rgb-core",       # Uses flecs - TODO: port to new ECS
    # "crates/rgb-life",       # Uses flecs - TODO: port to new ECS
    "crates/skript-lang",
    # Old flecs-based modules - deprecated
    # "crates/module/network",
    # "crates/module/network-components",
    # "crates/module/network-systems",
    # "crates/module/time",
    # "crates/module/time-components",
    # "crates/module/time-systems",
    # "crates/module/chunk",
    # "crates/module/chunk-components",
    # "crates/module/listener",
    # "crates/module/login",
    # "crates/module/login-components",
    # "crates/module/handshake",
    # "crates/module/config",
    # "crates/module/play",
    # "crates/module-skript",
    # "crates/persist",        # Uses flecs observers - deprecated
    # "crates/persist-derive",
    # New RGB ECS crates
    "crates/rgb-ecs",
    "crates/rgb-ecs-derive",
    "crates/rgb-ecs-introspect",
    "crates/rgb-ecs-introspect-derive",
    "crates/rgb-event",
    "crates/rgb-spatial",
    "crates/rgb-query",
    "crates/rgb-storage",
    "crates/rgb-tick",
    "crates/query-dsl",
    # Flecs-based crates
    "crates/flecs-history",
    "crates/flecs-rgb",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Andrew Gazelka"]

[workspace.metadata.crane]
name = "mc-server"

[workspace.dependencies]
rayon = "1.10"
crossbeam-channel = "0.5"
flecs_ecs = { path = "../Flecs-Rust/flecs_ecs" }

# New RGB ECS workspace dependencies
rgb-ecs = { path = "crates/rgb-ecs" }
rgb-ecs-derive = { path = "crates/rgb-ecs-derive" }
rgb-ecs-introspect = { path = "crates/rgb-ecs-introspect" }
rgb-ecs-introspect-derive = { path = "crates/rgb-ecs-introspect-derive" }
rgb-event = { path = "crates/rgb-event" }
rgb-spatial = { path = "crates/rgb-spatial" }
rgb-query = { path = "crates/rgb-query" }
rgb-storage = { path = "crates/rgb-storage" }
rgb-tick = { path = "crates/rgb-tick" }
query-dsl = { path = "crates/query-dsl" }

# Dependencies for new ECS crates
parking_lot = "0.12"
thread_local = "1.1"
crossbeam = "0.8"
hashbrown = "0.15"
rustc-hash = "2"
bitflags = "2"
smallvec = "1.13"
bumpalo = "3"
nebari = { path = "../nebari/nebari" }
bytemuck = { version = "1.21", features = ["derive"] }
tempfile = "3"
tango-bench = "0.6"
criterion = "0.5"
bytes = "1"
byteorder = "1"
eyre = "0.6"
color-eyre = "0.6"
wgpu = "24"
winit = "0.30"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
quote = "1"
proc-macro2 = "1"
syn = "2"
prettyplease = "0.2"
heck = "0.5"
libloading = "0.8"
notify = "7"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rodio = { version = "0.20", default-features = false, features = ["symphonia-wav"] }
ctrlc = "3"
heed = "0.20"
bincode = "1"
inventory = "0.3"
persist = { path = "crates/persist" }
persist-derive = { path = "crates/persist-derive" }

[workspace.lints.clippy]
# Deny all categories
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

# Allow specific lints - Code style
collapsible_if = "allow"
doc_lazy_continuation = "allow"
doc_markdown = "allow"
many_single_char_names = "allow"
match_same_arms = "allow"
single_match_else = "allow"
uninlined_format_args = "allow"

# Allow specific lints - Documentation
missing_const_for_fn = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"

# Allow specific lints - Design patterns
future_not_send = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
struct_excessive_bools = "allow"

# Allow specific lints - Miscellaneous
multiple_crate_versions = "allow"
similar_names = "allow"
use_self = "allow"
cast_lossless = "allow"
elidable_lifetime_names = "allow"
indexing_slicing = "allow"
excessive_nesting = "allow"
module_name_repetitions = "allow"
return_self_not_must_use = "allow"
or_fun_call = "allow"
too_many_lines = "allow"
disallowed_methods = "allow"
unnested_or_patterns = "allow"
unreadable_literal = "allow"
needless_range_loop = "allow"
match_like_matches_macro = "allow"
map_entry = "allow"
bool_to_int_with_if = "allow"
allow_attributes = "allow"
allow_attributes_without_reason = "allow"
default_trait_access = "allow"
branches_sharing_code = "allow"
ignored_unit_patterns = "allow"
needless_pass_by_ref_mut = "allow"
wildcard_imports = "allow"
collection_is_never_read = "allow"
map_unwrap_or = "allow"
redundant_closure_for_method_calls = "allow"
manual_div_ceil = "allow"
unused_async = "allow"

# Deny specific lints - Safety
char_indices_as_byte_indices = "deny"
string_slice = "deny"

# Deny specific lints - Code quality
cognitive_complexity = "deny"
missing_panics_doc = "deny"
print_stdout = "deny"

[workspace.lints.rust]
# Allow specific lints
dead_code = "allow"
mismatched_lifetime_syntaxes = "allow"

# Deny categories
deprecated_safe = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }

# Warn
unsafe_code = "warn"

# Config
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

# For hot-reload compatibility: dev and release must produce same struct layouts
# Key settings that affect ABI: opt-level, lto, codegen-units, panic
[profile.dev]
opt-level = 1
debug = true
panic = "unwind"
lto = false
codegen-units = 256

[profile.release]
opt-level = 3
debug = true
panic = "unwind"
lto = false
codegen-units = 256
