[package]
name = "mc-bot"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Simple Minecraft bot that joins and jumps"

[[bin]]
name = "mc-bot"
path = "src/main.rs"

[dependencies]
mc-protocol = { path = "../mc-protocol" }
mc-data = { path = "../mc-data" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre.workspace = true
byteorder = "1"
flate2 = "1"
rand = "0.8"

[lints]
workspace = true
