[package]
name = "mc-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Minecraft client for connecting to servers and recording packets"

[[bin]]
name = "mc-client"
path = "src/main.rs"

[dependencies]
mc-protocol = { path = "../mc-protocol" }
mc-packets = { path = "../mc-packets" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
byteorder = "1"
flate2 = "1"

[lints]
workspace = true
