[package]
name = "mc-data"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Generated Minecraft data (packets, blocks, etc)"

[dependencies]
mc-protocol = { path = "../mc-protocol" }
serde.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true
prettyplease.workspace = true
heck.workspace = true

[lints]
workspace = true
