[package]
name = "mc-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { version = "1", features = ["full", "process", "net", "io-util", "time", "sync", "rt-multi-thread", "macros"] }
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true
color-eyre.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
dirs = "6"

[dev-dependencies]
pretty_assertions = "1"

[lints]
workspace = true
