[package]
name = "mc-packets-gen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Code generator for Minecraft packet definitions"

[[bin]]
name = "mc-packets-gen"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true
prettyplease.workspace = true
heck.workspace = true

[lints]
workspace = true
