[package]
name = "mc-packets"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Generated Minecraft packet definitions"

[dependencies]
mc-protocol = { path = "../mc-protocol" }
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
