[package]
name = "mc-protocol-derive"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Derive macros for Minecraft protocol encoding/decoding"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[lints]
workspace = true
