[package]
name = "mc-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Minecraft protocol encoding/decoding traits and utilities"

[dependencies]
thiserror = "2"
byteorder = "1"
mc-protocol-derive = { path = "../mc-protocol-derive" }

[features]
default = ["derive"]
derive = []
