[package]
name = "mc-server-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Minecraft server ECS library using Flecs"

[dependencies]
flecs_ecs.workspace = true
crossbeam-channel.workspace = true
bytes.workspace = true
anyhow.workspace = true
mc-protocol = { path = "../mc-protocol" }
mc-data = { path = "../mc-data" }
tracing = "0.1"
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
