[package]
name = "mc-server-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Minecraft server ECS library - compatibility shim"

[lib]
# rlib (default) - statically linked

[dependencies]
flecs_ecs.workspace = true
module-network-components = { path = "../module/network-components" }

[lints]
workspace = true
