[package]
name = "mc-server-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "RGB ECS-based Minecraft server runner"

[[bin]]
name = "mc-server-runner"
path = "src/main.rs"

[dependencies]
rgb-ecs.workspace = true
rgb-event.workspace = true
rgb-spatial.workspace = true
rgb-query.workspace = true
rgb-storage.workspace = true
rgb-tick.workspace = true
query-dsl.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
ctrlc.workspace = true
bytes.workspace = true
byteorder.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
hashbrown.workspace = true
tokio = { version = "1", features = ["full"] }
serde.workspace = true
serde_json.workspace = true

# Minecraft protocol
mc-protocol = { path = "../mc-protocol" }
mc-data = { path = "../mc-data" }

# Audio profiling
rodio.workspace = true

[lints]
workspace = true
