[package]
name = "mc-server-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Flecs ECS-based Minecraft server runner"

[[bin]]
name = "mc-server-runner"
path = "src/main.rs"

[features]
default = ["dashboard"]
dashboard = ["axum", "tower-http"]

[dependencies]
flecs_ecs.workspace = true
flecs-history = { path = "../flecs-history" }
tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
ctrlc.workspace = true
bytes.workspace = true
byteorder.workspace = true
crossbeam-channel.workspace = true
hashbrown.workspace = true
tokio = { version = "1", features = ["full"] }
serde.workspace = true
serde_json.workspace = true

# Dashboard (optional, default enabled)
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

# Minecraft protocol
mc-protocol = { path = "../mc-protocol" }
mc-data = { path = "../mc-data" }

# Audio profiling
# rodio.workspace = true

[lints]
workspace = true
