[package]
name = "mc-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Basic Minecraft server example"

[[bin]]
name = "mc-server"
path = "src/main.rs"

[dependencies]
mc-protocol = { path = "../mc-protocol" }
mc-data = { path = "../mc-data" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
byteorder = "1"
fastnbt = "2"

[lints]
workspace = true
