[package]
name = "module-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Dynamic loader for hot-reloadable Flecs modules"

[lib]
# rlib (default) - statically linked into consumers, no diamond dependency issues

[dependencies]
flecs_ecs.workspace = true
libloading.workspace = true
notify.workspace = true
tracing.workspace = true
thiserror.workspace = true

[lints.clippy]
# Inherit from workspace
allow_attributes = "allow"
allow_attributes_without_reason = "allow"

[lints.rust]
# Dynamic library loading requires unsafe code
unsafe_code = "allow"
# Inherit rest from workspace
deprecated_safe = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
dead_code = "allow"
mismatched_lifetime_syntaxes = "allow"
