[package]
name = "persist"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
flecs_ecs.workspace = true
heed.workspace = true
serde.workspace = true
bincode.workspace = true
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
