[package]
name = "plugin-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Dynamic plugin loader for hot-reloadable Flecs modules"

[dependencies]
flecs_ecs.workspace = true
libloading.workspace = true
notify.workspace = true
tracing.workspace = true
thiserror.workspace = true

[lints]
workspace = true
