[package]
name = "plugin-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hot-reloadable Minecraft server plugin"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flecs_ecs.workspace = true
mc-server-lib = { path = "../mc-server-lib" }
module-loader = { path = "../module-loader" }

[lints]
workspace = true
