[package]
name = "plugin-time"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hot-reloadable time module plugin for Minecraft server"

[lib]
crate-type = ["dylib"]

[dependencies]
# Links to shared flecs_ecs.dylib - same instance as host
flecs_ecs.workspace = true
mc-server-lib = { path = "../mc-server-lib" }
