[package]
name = "rgb-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rgb-core = { path = "../rgb-core" }
rgb-life = { path = "../rgb-life" }
flecs_ecs.workspace = true
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
bytemuck.workspace = true
log.workspace = true
env_logger.workspace = true
