[package]
name = "rgb-ecs-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Derive macros for RGB ECS components"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
trybuild = "1.0"

[lints]
workspace = true
