[package]
name = "rgb-ecs-introspect-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Derive macro for Introspectable trait"

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
proc-macro2.workspace = true
syn = { workspace = true, features = ["full"] }

[lints]
workspace = true
