[package]
name = "rgb-ecs-introspect"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Introspection and serialization layer for RGB ECS dashboard"

[dependencies]
rgb-ecs.workspace = true
rgb-ecs-introspect-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
crossbeam-channel.workspace = true
nebari.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
