[package]
name = "rgb-spatial"
description = "RGB spatial partitioning for parallel tick execution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rgb-ecs.workspace = true
hashbrown.workspace = true
smallvec.workspace = true
rayon.workspace = true

[lints]
workspace = true
